[package]
name = "justlog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log_stdout", "log_file"]
log_file = []
log_stdout = []
log_gui = []
tracing_off = ["tracing/max_level_off"]

[dependencies]
tempfile = "^3"
lazy_static = "^1.4"

tracing-appender = "^0.2"
tracing-test = "^0.2"
tracing = { version = "^0.1", features = ["attributes", "valuable"] }
tracing-subscriber = { version = "^0.3", features = ["json"] }
#tracing-egui = { path = "../../tracing-egui" } #version = "^0.1" }
console-subscriber = "0.2"
tracing-mutex = "0.3"
function_name = "^0.3"